# stockprice-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/yfinance_mcp/: __init__.py  cli.py  client.py  server.py
tests/: test_client.py  test_client_errors.py  test_edge_cases.py  test_logging.py  test_server.py
