[project]
name = "stockprice-mcp"
version = "0.1.0"
description = "Stock price & FX MCP server for Claude Desktop, powered by yfinance — no API key required"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "yfinance", "mcp", "yahoo-finance", "stock", "japan", "fx", "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "yfinance>=0.2",
    "fastmcp>=2.0",
    "click>=8.0",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.scripts]
yfinance-mcp = "yfinance_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/stockprice-mcp"
Repository = "https://github.com/ajtgjmdjp/stockprice-mcp"
Issues = "https://github.com/ajtgjmdjp/stockprice-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".mcpregistry_*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/yfinance_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["yfinance_mcp"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true
follow_untyped_imports = false

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
